--- a/my-app/src/views/App.scss
+++ b/my-app/src/views/App.scss
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.app-container{
+
+
+  .add-new{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
