--- a/my-app/src/styles/TableUser.scss
+++ b/my-app/src/styles/TableUser.scss
@@ -7,3 +7,15 @@
         padding: 0 2px;
     }
 }
+
+.add-new{
+    display: flex;  
+    align-items: center;
+    justify-content: space-between;
+
+    .group-button{
+        display: flex;
+        gap: 10px;
+    
+    }
+}
