--- a/my-app/src/views/App.scss
+++ b/my-app/src/views/App.scss
@@ -46,3 +46,70 @@
     align-items: center;
   }
 }
+
+.app-container{
+
+  .login-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+
+    .title{
+      text-align: center;
+      font-size: 24px;
+      font-weight: 600px;
+      padding-top: 30px;
+    }
+    .text{
+      font-weight: 600;
+      padding-bottom: 3px;
+    }
+
+    input{
+      padding:8px 5px;
+      outline: none;
+      margin-bottom: 7px; 
+      width: 100%;
+
+      &:hover{
+        background-color: beige;
+        border: 1px solid rgb(225, 208, 208);
+      }
+    }
+
+    .input-2{
+      position: relative;
+
+      i{
+        position: absolute;
+        top: 15px;
+        right: 10px;
+      }
+    }
+
+    button{
+      margin-top: 15px;
+      padding: 10px;
+      border-radius: 3px;
+      border: none;
+      outline: none;  
+      
+      &.active{
+        background-color: rgb(198, 78, 78);
+        color: white;
+      }
+    }
+    bottom[disabled = disabled], button:disabled{
+      cursor: not-allowed;
+    }
+
+    .back{
+      text-align: center;
+      margin-top: 30px;
+      cursor: pointer;
+    }
+
+  }
+
+}
